Страницы второго уровня поиск по производителя и поиск по сырью

--- a/index.html
+++ b/index.html
@@ -325,7 +325,8 @@
 
                             <div class="catalog__item-content">
                                 <div class="catalog__item-title">
-                                    СПЕЦИАЛЬНЫЕ ПРЕДЛОЖЕНИЯ
+                                    СПЕЦИАЛЬНЫЕ <br>
+                                    ПРЕДЛОЖЕНИЯ
                                 </div>
                                 <div class="catalog__item-hr">
                                     <div class="catalog__item-line"></div>
@@ -342,12 +343,13 @@
 
                             </div>
                         </a>
-                        <a href="" class="catalog__item" style="background: url(images/content/catalog2.jpg) 0 0 no-repeat; background-size: cover;">
+                        <a href="products.html" class="catalog__item" style="background: url(images/content/catalog2.jpg) 0 0 no-repeat; background-size: cover;">
                             <div class="catalog__item-filter"></div>
 
                             <div class="catalog__item-content">
                                 <div class="catalog__item-title">
-                                    СПЕЦИАЛЬНЫЕ ПРЕДЛОЖЕНИЯ
+                                    Поиск <br>
+                                    по сырью
                                 </div>
                                 <div class="catalog__item-hr">
                                     <div class="catalog__item-line"></div>
@@ -369,7 +371,8 @@
 
                             <div class="catalog__item-content">
                                 <div class="catalog__item-title">
-                                    СПЕЦИАЛЬНЫЕ ПРЕДЛОЖЕНИЯ
+                                    Поиск по <br>
+                                    применению
                                 </div>
                                 <div class="catalog__item-hr">
                                     <div class="catalog__item-line"></div>
@@ -386,12 +389,13 @@
 
                             </div>
                         </a>
-                        <a href="" class="catalog__item" style="background: url(images/content/catalog4.jpg) 0 0 no-repeat; background-size: cover;">
+                        <a href="manufacturers.html" class="catalog__item" style="background: url(images/content/catalog4.jpg) 0 0 no-repeat; background-size: cover;">
                             <div class="catalog__item-filter"></div>
 
                             <div class="catalog__item-content">
                                 <div class="catalog__item-title">
-                                    СПЕЦИАЛЬНЫЕ ПРЕДЛОЖЕНИЯ
+                                    Производители <br>
+                                    сырья
                                 </div>
                                 <div class="catalog__item-hr">
                                     <div class="catalog__item-line"></div>
