--- a/products.html
+++ b/products.html
@@ -92,9 +92,13 @@
                         Удобный выбор нашей продукции по сырью
                     </h3>
                     <div class="text">
-                        Равным образом реализация намеченных плановых заданий играет важную роль в формировании форм
-                        развития. Значимость этих проблем настолько очевидна, что укрепление и развитие структуры
-                        способствует подготовки и реализации направлений прогрессивного развития.
+                        <div class="row">
+                            <div class="text__left">
+                                Равным образом реализация намеченных плановых заданий играет важную роль в формировании форм
+                                развития. Значимость этих проблем настолько очевидна, что укрепление и развитие структуры
+                                способствует подготовки и реализации направлений прогрессивного развития.
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <!-- END desc -->
